src/objects/Gift_Card_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>External_Store_Id__c</fullName>
        <label>External Store Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Store</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Gift_Card_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Gift Card Transaction</label>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Gift Card Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Card Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>